generate refresh token, set refresh token in cookie

--- a/.env
+++ b/.env
@@ -10,4 +10,8 @@ EXPRESS_SESSION_COOKIE=1h
 
 #setup jwt
 JWT_ACCESS_TOKEN=JUSTARANDOMSECRET
-JWT_ACCESS_EXPIRE=6000s
+JWT_ACCESS_EXPIRE=1d
+
+
+JWT_REFRESH_TOKEN=JUSTARANDOMREFRESHSECRET
+JWT_REFRESH_EXPIRE=1d
