change query param pagination

--- a/.env
+++ b/.env
@@ -10,7 +10,7 @@ EXPRESS_SESSION_COOKIE=1h
 
 #setup jwt
 JWT_ACCESS_TOKEN=JUSTARANDOMSECRET
-JWT_ACCESS_EXPIRE=1d
+JWT_ACCESS_EXPIRE=10m
 
 
 JWT_REFRESH_TOKEN=JUSTARANDOMREFRESHSECRET
